--- a/design.css
+++ b/design.css
@@ -6,6 +6,7 @@
 }
 #top h1{
 font-size: 140px;
+
 }
 #top p{
     font-size: 16px;
@@ -14,12 +15,12 @@ font-size: 140px;
 nav{
     background-color: black;
     padding: 10px;
-    margin: -8px;
+    
     color:white;
     text-align: center;
 
     position: sticky;
-    top:0;
+    top: 0;
 }
 nav a{
     text-decoration: none;
@@ -34,31 +35,42 @@ nav a:hover{
     color: #000;
 }
 
-h2{
-    font-family: 'Source Code Pro', monospace;
-}
 
 
-#greek{
-    height: 100px;
-    float: left;
-    margin: 6px;
-    border-radius: 16px;
-}
 
-.infoBox{
-    margin: 10px;
-    padding: 0 6px 0 6px;
+
+
+section.infoBox {
+    
+
+    
+    padding:6px;
+    
+    
     border-radius: 6px;
-    background-color: burlywood;
-}
-.infoBox h2{
-    font-size: 40px;
-}
-.infoBox p{
+    background-color: lemonchiffon;
     font-family: 'Montserrat', sans-serif;
     text-align: justify;
-    font-size: 20px;
-    margin: 16px;
+    font-size: 24px;
+}
+.infoBox img{
+    width: 200px;
     
+    float: left;
+    margin: 10px;
+    border-radius: 16px;
+}
+.infoBox h2{
+    font-family: 'Source Code Pro', monospace;
+    font-size: 40px;
+    margin-bottom: 0;
+}
+
+.firstInfoLine{
+    font-style:italic;
+    display:block;
+    font-size: 30px;
+}
+.infoBox p{
+
 }
