--- a/design.css
+++ b/design.css
@@ -71,6 +71,33 @@ section.infoBox {
     display:block;
     font-size: 30px;
 }
-.infoBox p{
-
+#kontaktFormular{
+    /*background-color: lightblue;*/
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+}
+#kontaktFormular label{
+    display: inline-block;
+    width: 200px;
+    padding: 10px;
+    text-align: right;
+}
+#kontaktFormular input, #kontaktFormular select, #kontaktFormular textarea, #kontaktFormular button {
+    width: 300px;
+    margin: 10px;
+    padding: 10px;
+    border: none;
+    border-bottom: 2px solid black;
+}
+#kontaktFormular select{
+    width: 322px;
+}
+#kontaktFormular textarea{
+    resize: none;
+    border: 2px solid black;
+}
+#kontaktFormular button {
+    border: 2px solid black;
+    border-radius: 10px;
 }
